# pptutils

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  mkdocs.yml  pyproject.toml  template.env
.github/workflows/: ci.yml  deploy-docs.yml
docs/: index.md
src/pptutils/: .gitignore  __init__.py  __main__.py
tests/: .gitignore  test_version.py
